--- a/Views/Main.cshtml
+++ b/Views/Main.cshtml
@@ -8,41 +8,40 @@
 <html lang="en">
     <head>
      <!-- Meta Data -->
-	    @await Html.PartialAsync("_MetaData")
+    @await Html.PartialAsync("_MetaData")
+    @await Html.PartialAsync("_css")
 
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="/css/styles.css" rel="stylesheet" asp-append-version="true" />
-    @* asp-append-version="true" => To update css to last version *@
+       
     </head>
     <body id="page-top">
 
-        <!-- Navigation-->
-	@await Html.PartialAsync("_MainNavigation")
-         
-        @RenderBody()
+    <!-- Language Modal -->
+    @await Html.PartialAsync("_Language")
+    <!-- Accessibility  Modal -->
+    @await Html.PartialAsync("_Accessibility")
+    <!-- Gold star modal -->
+    @await Html.PartialAsync("_GoldStar")
+    <!-- Header -->
+    @await Html.PartialAsync("_Header")
+    <!-- Main Container -->
+    <main class="container flex flex-col lg:flex-row gap-5 mx-auto px-4 md:px-6 lg:px-8 py-12">
+        <div class="w-full gap-10 flex flex-col">
        
-        <!-- Footer-->
-    	@await Html.PartialAsync("_Footer")
+    <!-- Navigation-->
+	@await Html.PartialAsync("_BreadCrumb")
+         
+    </div>
+    </main>
+        @RenderBody()
+    <!-- Main Container -->
 
-        <!-- Portfolio Modals-->
-	    @await Html.PartialAsync("_Modals")
-        
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js" asp-append-version="true"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    <!-- Footer-->
+    	@await Html.PartialAsync("_Footer")
+         
+
+
+
+
 	   
-        <!-- Lazyload JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.2/lazysizes.min.js" integrity="sha512-q583ppKrCRc7N5O0n2nzUiJ+suUv7Et1JGels4bXOaMFQcamPk9HjdUknZuuFjBNs7tsMuadge5k9RzdmO+1GQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    </body>
+        </body>
 </html>
