apply navigation design

--- a/Views/Main.cshtml
+++ b/Views/Main.cshtml
@@ -21,8 +21,9 @@
     @await Html.PartialAsync("_Accessibility")
     <!-- Gold star modal -->
     @await Html.PartialAsync("_GoldStar")
-    <!-- Header -->
-    @await Html.PartialAsync("_Header")
+   
+    <!-- Navigation-->
+    @await Html.PartialAsync("_MainNavigation")
     <!-- Main Container -->
     <main class="container flex flex-col lg:flex-row gap-5 mx-auto px-4 md:px-6 lg:px-8 py-12">
         <div class="w-full gap-10 flex flex-col">
