--- a/Views/Partials/blockgrid/Components/NavigationGroup.cshtml
+++ b/Views/Partials/blockgrid/Components/NavigationGroup.cshtml
@@ -1,9 +1,9 @@
 ﻿@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockGridItem<ContentModels.NavigationGroup>>
 
 @if ((Model.Content.ChildLinks != null && Model.Content.ChildLinks.Any())
-            && (!string.IsNullOrWhiteSpace(Model.Content.Title) || Model.Content.Link != null))
+           && (!string.IsNullOrWhiteSpace(Model.Content.Title) || Model.Content.Link != null))
 {
-    <li class="nav-item mx-0 mx-lg-1 dropdown">
+    <li class="menu-item text-center lg:inline-flex lg:items-center group">
         @if (Model.Content.Link != null)
         {
             <a class="nav-link py-3 px-0 px-lg-3 rounded dropdown-toggle" target="@Model.Content.Link.Target" href="@Model.Content.Link.Url" id="@Model.Content.Key.ToString("N")" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -26,5 +26,9 @@
 }
 else
 {
-    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" target="@Model.Content.Link.Target" href="@Model.Content.Link.Url">@Model.Content.Link.Name</a></li>
+    <li class="menu-item text-center lg:inline-flex lg:items-center group">
+        <a class="group-hover:!text-primary-800 group-hover:!border-primary-800" target="@Model.Content.Link.Target" href="@Model.Content.Link.Url">
+            @Model.Content.Link.Name
+        </a>
+    </li>
 }
