--- a/Views/Partials/_MetaData.cshtml
+++ b/Views/Partials/_MetaData.cshtml
@@ -4,4 +4,6 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/x-icon" href="~/assets/favicon.svg">
+
 <title>E-services</title>
