--- a/Views/SidebarPage.cshtml
+++ b/Views/SidebarPage.cshtml
@@ -2,7 +2,7 @@
 
 
 @{
-	Layout = "SidebarLayout";
+	Layout = "Main";
 
 	var rootNode = Umbraco.ContentAtRoot().FirstOrDefault();
 	var sidebarNode = rootNode?.Children.FirstOrDefault(x => x.Name == "Sidebar");
@@ -150,12 +150,23 @@
 <script>
 	function getContent(nodeId) {
 		fetch(`/umbraco/api/sidebar/getcontent?id=${nodeId}`)
-			.then(response => response.text())
-			.then(html => {
-				document.getElementById("sidebar-content").innerHTML = html;
-			})
-			.catch(error => console.error("Error fetching content:", error));
+			.then(response => {
+				if(response.redirected){
+					window.location.href = response.url;
+				}else{
+					return response.text().then(html => {
+						document.getElementById("sidebar-content").innerHTML = html;
+					}).catch(error => console.error("Error fetching content:", error));
+				}
+			}
+				
+			
+			
 	}
+
+
+		
+	
 </script>
 
 
