--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -9,6 +9,8 @@
 @using Umbraco.Cms.Core.Models.Blocks
 @using Umbraco.Cms.Core.Models.PublishedContent
 @using Microsoft.AspNetCore.Html
+
+@using NewUmbraco.Services;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Smidge
 @addTagHelper *, Our.Umbraco.TagHelpers
