--- a/Views/_SidebarPageContent.cshtml
+++ b/Views/_SidebarPageContent.cshtml
@@ -2,7 +2,7 @@
 
 @if (Model != null)
 {
-    @await Html.GetBlockGridHtmlAsync(Model, "mainContent")
+    @await Html.GetBlockGridHtmlAsync(Model, "sidebarMainContent")
 }
 else
 {
