--- a/Views/Partials/blockgrid/Components/Card.cshtml
+++ b/Views/Partials/blockgrid/Components/Card.cshtml
@@ -1,7 +1,9 @@
 ﻿@using Umbraco.Cms.Web.Common.PublishedModels
-@inherits UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockGridItem<ContentModels.Card>>
+ @* @inherits UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockGridItem<ContentModels.Card>>  *@
 
+@inherits UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockListItem<ContentModels.Card>>
 
+	
 <div>
 
 	<div class="aegov-card card-news">
