--- a/Views/Partials/_css.cshtml
+++ b/Views/Partials/_css.cshtml
@@ -9,8 +9,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-@* <script src="~/css/main.bundle.js"></script>
- *@
+ <script src="~/css/main.bundle.js"></script>
+ 
  <script>
     let zoomLevel = 1; // Default zoom level
     let highlightLinks = false;
