--- a/Views/Partials/blockgrid/Components/Tab.cshtml
+++ b/Views/Partials/blockgrid/Components/Tab.cshtml
@@ -1,48 +1,264 @@
 ﻿@using Umbraco.Cms.Web.Common.PublishedModels
 @inherits UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockGridItem<ContentModels.Tab>>
 
+@{
+
+	var parent = ViewBag.Parent;
+}
+
+
+
+@if (parent == nameof(Tabs))
+{
+	@* await Html.PartialAsync("blockgrid/Components/Tab", item); *@
+
+	<div class="tab-content" role="tabpanel" id="body-item1-sample-@Model.Content!.Title">
+
+		<div class="news-card-slider aegovs-slider-style [&_.slick-slide]:mx-2.5 [&_.slick-list]:-mx-2.5 sm:[&_.slick-slide]:mx-3.5 sm:[&_.slick-list]:-mx-3.5">
+
+			@foreach (BlockListItem<ContentModels.Card> card in Model.Content.Cards!)
+			{
+
+				@* await Html.PartialAsync("blockgrid/Components/Card", card); *@
+
+				<div>
+
+					<div class="aegov-card card-news">
+						<a href="#">
+							<img class="lazyload"
+							data-srcset=" @Url.GetSrcSetUrls(card.Content.Image!, 400, 290)" src="@card.Content.Image!.GetCropUrl(40, 29, quality: 40)" alt="@card.Content.Image!.GetAltText()" width="400" height="290" sizes="auto">
+						</a>
+
+						<div class="card-content">
+							<div class="custom-divide custom-divide-sm flex flex-wrap">
+								<div class="text-aeblack-600 text-sm font-normal">  @card.Content.Date.ToString("dd/MM/yyyy")</div>
+
+								@* <a href="#" class="text-sm font-normal">Press release</a> *@
+							</div>
+							<h5 class="max-md:text-lg line-clamp-3">@card.Content.Title</h5>
+							<p class="line-clamp-3">@card.Content.ShortDescription</p>
+							<a href="@card.Content.Link?.Url" class="aegov-link">
+								@card.Content.Link?.Name
+								<svg class="link-icon rtl:-scale-x-100" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><line x1="40" y1="128" x2="216" y2="128" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><polyline points="144 56 216 128 144 200" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></polyline></svg>
+							</a>
+						</div>
+					</div>
+
+				</div>
+
+
+
+			}
+
+		</div>
+	</div>
+
+}
+else
+{
+	var cards = Model.Content.Cards!;
+
+	var years = cards
+				.OfType<BlockListItem<Card>>()
+				.Select(card => card.Content.Date.Year.ToString()).OrderBy(x => x).Distinct().ToList();
+
 	
-<div class="tab-content" role="tabpanel" id="body-item1-sample-@Model.Content.Title">
-
-	<div class="news-card-slider aegovs-slider-style [&_.slick-slide]:mx-2.5 [&_.slick-list]:-mx-2.5 sm:[&_.slick-slide]:mx-3.5 sm:[&_.slick-list]:-mx-3.5">
-
-		@foreach (BlockListItem<ContentModels.Card> card in Model.Content.Cards!)
-		{
-
-			@* await Html.PartialAsync("blockgrid/Components/Card", card); *@
+	var selectedYear = Context.Request.Query["year"];
 
 
-			<div>
+	var searchTerm = Context.Request.HasFormContentType && Context.Request.Form.ContainsKey("searchelem")
+	? Context.Request.Form["searchelem"].ToString().ToLower()
+	: "";
+
+
+	var filteredCards = cards!
+		.OfType<BlockListItem<Card>>()
+		.Where(card =>
+			(string.IsNullOrEmpty(selectedYear) || card.Content.Date.Year.ToString() == selectedYear) &&
+			(string.IsNullOrEmpty(searchTerm) ||
+				card.Content.Title?.ToLower().Contains(searchTerm) == true ||
+				card.Content.ShortDescription?.ToLower().Contains(searchTerm) == true)
+		)
+		.Select(card => card.Content)
+		.ToList();
+
+
+
+
+
+
+
+
+
+
+
+
+	<div class="w-full lg:w-[70%] h-full">
+
+		<div class="flex justify-between flex-col md:flex-row my-5 py-5 border-b-2 border-[#E1E3E5]">
+			<div class="dates flex items-center w-full max-w-full md:max-w-[50%]">
+				<a href="" class="max-h-fit">
+					<svg xmlns="http://www.w3.org/2000/svg" width="33" height="32" viewBox="0 0 33 32" fill="none">
+						<path d="M21.3411 25.2924C21.434 25.3854 21.5077 25.4957 21.558 25.6171C21.6083 25.7384 21.6342 25.8686 21.6342 25.9999C21.6342 26.1313 21.6083 26.2614 21.558 26.3828C21.5077 26.5042 21.434 26.6145 21.3411 26.7074C21.2482 26.8004 21.1379 26.8741 21.0165 26.9243C20.8951 26.9746 20.765 27.0005 20.6336 27.0005C20.5022 27.0005 20.3721 26.9746 20.2507 26.9243C20.1293 26.8741 20.019 26.8004 19.9261 26.7074L9.9261 16.7074C9.83312 16.6146 9.75936 16.5043 9.70904 16.3829C9.65872 16.2615 9.63281 16.1314 9.63281 15.9999C9.63281 15.8685 9.65872 15.7384 9.70904 15.617C9.75936 15.4956 9.83312 15.3853 9.9261 15.2924L19.9261 5.29245C20.1137 5.10481 20.3682 4.99939 20.6336 4.99939C20.899 4.99939 21.1535 5.1048 21.3411 5.29245C21.5287 5.48009 21.6342 5.73458 21.6342 5.99995C21.6342 6.26531 21.5287 6.5198 21.3411 6.70745L12.0473 15.9999L21.3411 25.2924Z" fill="#343330" />
+					</svg>
+				</a>
+
+				<div class="years flex justify-center items-center gap-5 w-full m-w-[25%]">
+
+					@foreach (var year in years)
+					{
+						var isActive = year == selectedYear ? "active py-2 font-bold" : "";
+
+						<a href="?year=@year" class="text-aeblack-900 no-underline my-2 flex items-center @isActive">
+							@year
+						</a>
+					}
+
+
+				</div>
+				<a href="">
+					<svg xmlns="http://www.w3.org/2000/svg" width="33" height="32" viewBox="0 0 33 32" fill="none">
+						<path d="M23.3414 16.7074L13.3414 26.7074C13.2484 26.8004 13.1381 26.8741 13.0168 26.9243C12.8954 26.9746 12.7653 27.0005 12.6339 27.0005C12.5025 27.0005 12.3724 26.9746 12.251 26.9243C12.1296 26.8741 12.0193 26.8004 11.9264 26.7074C11.8334 26.6145 11.7597 26.5042 11.7095 26.3828C11.6592 26.2614 11.6333 26.1313 11.6333 25.9999C11.6333 25.8686 11.6592 25.7384 11.7095 25.6171C11.7597 25.4957 11.8334 25.3854 11.9264 25.2924L21.2201 15.9999L11.9264 6.70745C11.7387 6.5198 11.6333 6.26531 11.6333 5.99995C11.6333 5.73458 11.7387 5.48009 11.9264 5.29245C12.114 5.1048 12.3685 4.99939 12.6339 4.99939C12.8992 4.99939 13.1537 5.1048 13.3414 5.29245L23.3414 15.2924C23.4343 15.3853 23.5081 15.4956 23.5584 15.617C23.6087 15.7384 23.6346 15.8685 23.6346 15.9999C23.6346 16.1314 23.6087 16.2615 23.5584 16.3829C23.5081 16.5043 23.4343 16.6146 23.3414 16.7074Z" fill="#343330" />
+					</svg>
+				</a>
+			</div>
+			<div class="right flex items-center gap-2">
+				<form class="w-full" action="#" method="post">
+					<div class="aegov-form-control md:w-64 w-full">
+						<div class="form-control-input search-border-color flex-row-reverse">
+							<input type="search" aria-label="search in site" name="searchelem" id="searchelem"
+								   placeholder="Search">
+							<button type="submit" class="control-suffix search-icon">
+								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+									<rect width="256" height="256" fill="none"></rect>
+									<circle cx="112" cy="112" r="80" fill="none" stroke="currentColor"
+											stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></circle>
+									<line x1="168.57" y1="168.57" x2="224" y2="224" fill="none"
+										  stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+										  stroke-width="16"></line>
+								</svg>
+								<span class="sr-only">Search</span>
+							</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+
+		<!-- News Grid -->
+		<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+
+
+
+			@foreach (var card in filteredCards)
+			{
 
 				<div class="aegov-card card-news">
 					<a href="#">
 						<img class="lazyload"
-							 data-srcset=" @Url.GetSrcSetUrls(card.Content.Image, 400, 290)" src="@card.Content.Image.GetCropUrl(40, 29, quality: 40)" alt="@card.Content.Image.GetAltText()" width="400" height="290" sizes="auto">
+							 data-srcset=" @Url.GetSrcSetUrls(card.Image!, 400, 290)" src="@card.Image!.GetCropUrl(40, 29, quality: 40)" alt="@card.Image!.GetAltText()" width="400" height="290" sizes="auto">
 					</a>
 
 					<div class="card-content">
 						<div class="custom-divide custom-divide-sm flex flex-wrap">
-							<div class="text-aeblack-600 text-sm font-normal">  @card.Content.Date.ToString("dd/MM/yyyy")</div>
+							<div class="text-aeblack-600 text-sm font-normal">  @card.Date.ToString("dd/MM/yyyy")</div>
 
 							@* <a href="#" class="text-sm font-normal">Press release</a> *@
 						</div>
-						<h5 class="max-md:text-lg line-clamp-3">@Model.Content.Title</h5>
-						<p class="line-clamp-3">@card.Content.ShortDescription</p>
-						<a href="@card.Content.Link?.Url" class="aegov-link">
-							@card.Content.Link?.Name
+						<h5 class="max-md:text-lg line-clamp-3">@card.Title</h5>
+						<p class="line-clamp-3">@card.ShortDescription</p>
+						<a href="@card.Link?.Url" class="aegov-link">
+							@card.Link?.Name
 							<svg class="link-icon rtl:-scale-x-100" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><line x1="40" y1="128" x2="216" y2="128" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><polyline points="144 56 216 128 144 200" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></polyline></svg>
 						</a>
 					</div>
 				</div>
 
+			}
+
+
+		</div>
+
+		<!-- Pagination -->
+		<div class="flex items-center justify-center py-5 mt-5">
+			<!-- Code for Mobile Pagination -->
+			<div class="aegov-pagination flex flex-1 justify-between items-center sm:hidden">
+				<a class="aegov-pagination-previous" href="#">
+					<svg aria-hidden="true" class="rtl:rotate-180" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+						<rect width="256" height="256" fill="none" />
+						<polyline points="160 208 80 128 160 48" fill="none" stroke="currentColor"
+								  stroke-linecap="round" stroke-linejoin="round" stroke-width="16" />
+					</svg>
+					<span>Previous</span>
+				</a>
+				<span class="pages">Page 10 of 13</span>
+				<a class="aegov-pagination-next" href="#">
+					<span>Next</span>
+					<svg aria-hidden="true" class="rtl:rotate-180" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+						<rect width="256" height="256" fill="none" />
+						<polyline points="96 48 176 128 96 208" fill="none" stroke="currentColor"
+								  stroke-linecap="round" stroke-linejoin="round" stroke-width="16" />
+					</svg>
+				</a>
 			</div>
+			<!-- Code for Desktop Pagination -->
+			<div class="aegov-pagination max-sm:hidden" role="navigation">
+				<a class="aegov-pagination-first" aria-label="First Page" href="#">
+					<svg aria-hidden="true" class="rtl:rotate-180" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+						<rect width="256" height="256" fill="none" />
+						<polyline points="200 208 120 128 200 48" fill="none" stroke="currentColor"
+								  stroke-linecap="round" stroke-linejoin="round" stroke-width="16" />
+						<polyline points="120 208 40 128 120 48" fill="none" stroke="currentColor"
+								  stroke-linecap="round" stroke-linejoin="round" stroke-width="16" />
+					</svg>
+					<span>First</span>
+				</a>
+				<a class="aegov-pagination-previous" rel="prev" aria-label="Previous Page" href="#">
+					<svg aria-hidden="true" class="rtl:rotate-180" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+						<rect width="256" height="256" fill="none" />
+						<polyline points="160 208 80 128 160 48" fill="none" stroke="currentColor"
+								  stroke-linecap="round" stroke-linejoin="round" stroke-width="16" />
+					</svg>
+					<span>Previous</span>
+				</a>
+				<a class="aegov-pagination-page aegov-pagination-smaller" title="Page 1" href="#">1</a>
+				<a class="aegov-pagination-page aegov-pagination-smaller" title="Page 2" href="#">2</a>
+				<span aria-current="page" class="aegov-pagination-current">3</span>
+				<a class="aegov-pagination-page aegov-pagination-larger" title="Page 4" href="#">4</a>
+				<a class="aegov-pagination-page aegov-pagination-larger" title="Page 5" href="#">5</a>
+				<span class="aegov-pagination-extend">...</span>
+				<a class="aegov-pagination-page aegov-pagination-larger" title="Page 17" href="#">17</a>
+				<a class="aegov-pagination-next" rel="next" aria-label="Next Page" href="#">
+					<span>Next</span>
+					<svg aria-hidden="true" class="rtl:rotate-180" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+						<rect width="256" height="256" fill="none" />
+						<polyline points="96 48 176 128 96 208" fill="none" stroke="currentColor"
+								  stroke-linecap="round" stroke-linejoin="round" stroke-width="16" />
+					</svg>
+				</a>
+				<a class="aegov-pagination-last" aria-label="Last Page" href="#">
+					<span>Last</span>
+					<svg aria-hidden="true" class="rtl:rotate-180" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+						<rect width="256" height="256" fill="none" />
+						<polyline points="56 48 136 128 56 208" fill="none" stroke="currentColor"
+								  stroke-linecap="round" stroke-linejoin="round" stroke-width="16" />
+						<polyline points="136 48 216 128 136 208" fill="none" stroke="currentColor"
+								  stroke-linecap="round" stroke-linejoin="round" stroke-width="16" />
+					</svg>
+				</a>
+			</div>
+		</div>
 
 
-
-		}
 
 	</div>
-</div>
+
+
+}
+
+
+
+
 
 
 
